# MARS

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_web.py  simple_app.py
src/multi_agent_research_system_mars/: crew.py  main.py
src/multi_agent_research_system_mars/config/: agents.yaml  tasks.yaml
src/multi_agent_research_system_mars/tools/: gmail_tool.py  pdf_generator_tool.py
static/css/: auth.css
static/js/: auth.js  firebase-config.js
templates/: auth.html  index.html
